# toy_api

./: .gitignore  MANIFEST.in  README.md  README_v2.md  demo_setup.py  example_toy_api_response.json  object_notation.md  package_names.txt  pyproject.toml  test_configurable_apis.py  validate_base_endpoint.py
config/: v1.yaml  v2.yaml  v3.yaml  v4.yaml
config/apis/: v1.yaml  v3.yaml  v4.yaml
config/databases/: complex.yaml  db1.yaml  simple.yaml
config/objects/: core.yaml
config/tables/: db1.yaml
configs/: port_1234.yaml  port_4321.yaml  port_8080.yaml  port_9090.yaml  toy_api_v1.yaml  toy_api_v3.yaml  toy_api_v4.yaml
tests/: __init__.py  test_base_endpoint.py  test_configurable_apis.py  test_names_update.py  test_unified_data_gen.py  test_validate_base_endpoint.py
toy_api/: __init__.py  app.py  cli.py  config_discovery.py  configurable_app.py  configurable_cli.py  constants.py  dummy_data_generator.py  port_utils.py  process_manager.py  response_generator.py  table_generator.py
toy_api.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
toy_api_config/: example_api_with_objects.yaml
toy_api_config/databases/: example_with_objects.yaml
toy_api_config/objects/: example.yaml
