[build-system]
requires = ["setuptools", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "toy_api"
version = "0.0.1"
readme = "README.md"
dependencies = [
    "flask",
    "click",
    "pyyaml",
    "pyarrow"
]

[project.scripts]
toy-api = "toy_api.cli:main"

[tool.setuptools]
packages = ["toy_api"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
toy_api = { path = ".", editable = true }

[tool.pixi.tasks]
toy_api = "toy_api"

[tool.pixi.environments]
default = { features = [] }
dev = { features = ["dev"] }

[tool.pixi.feature.dev.dependencies]
twine = "*"

[tool.pixi.feature.dev.pypi-dependencies]
build = "*"
